Update to support Java9